Remove redundant parentheses
- No need to nest
- Use valueOf()